# c-template

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_project.c
